--- a/ClientUDP.csproj
+++ b/ClientUDP.csproj
@@ -1,10 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>10</LangVersion>
+    <Version>1.0.1.0</Version>
+    <AssemblyVersion>1.0.1.0</AssemblyVersion>
+    <FileVersion>1.0.1.0</FileVersion>
+    <Company>Trevias Xk</Company>
+    <Authors>Trevias Xk</Authors>
+    <Product>ClientUDP</Product>
+    <Description>ClientUDP é um client criado em .NET Core com C#, é um projeto simples e de fácil entendimento, é perfeito para criação de servidores de jogos como por exemplo a Unity 3D.</Description>
+    <Copyright>Trevias Xk © 2022</Copyright>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
 </Project>
